src/styles/global.css
@import "reset.css";
@import "cooperbt.css";
@import "pragmatapro.css";
@import "stack.css";

/* Workaround for browsers that don't support oklch */
:root {
  --color-primary: hsl(225 100% 64%);
  --color-primary-5: hsl(225 100% 64% / .05);
  --color-primary-10: hsl(225 100% 64% / .1);
  --color-primary-20: hsl(225 100% 64% / .2);
  --color-primary-dark: hsl(249 100% 7%);
}
@supports (color: oklch(50% .25 265)) {
  :root {
    --color-primary: oklch(60% .25 265);
    --color-primary-5: oklch(60% .25 265 / 5%);
    --color-primary-10: oklch(60% .25 265 / 10%);
    --color-primary-20: oklch(60% .25 265 / 20%);
    --color-primary-dark: oklch(10% .1 265);
  }
}

:root {
  --width: 768px;
  --color-text: rgba(0, 0, 0, .8);
  --color-heading: #111;
  --color-light: #ccc;
  --color-gray: #555;
  --color-nav-stroke: rgb(242 45 94);

  --color-bg: #fff;
  --color-button: var(--color-primary-10);
  --color-button-hover: var(--color-primary-20);
  --color-button-border: var(--color-primary-20);

  --color-header-border: rgba(0, 0, 0, 0.1);

  --color-footer-bg: rgba(0, 0, 0, 0.02);
  --color-footer-border: rgba(0, 0, 0, 0.03);
  --color-box-bg: rgba(0, 0, 0, 0.02);

  --font-serif: "Cooper BT", Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
  --font-sans: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";

  /* Type scale 1.250 (Major Third) */
  --font-size-largest: 2.1875rem;
  --font-size-larger: 1.75rem;
  --font-size-large: 1.4375rem;
  --font-size: 1.125rem;
  --font-size-small: .875rem;

  /* Spacing */
  --space-0: 0;
  --space-1: .25rem; /* 4px */
  --space-2: .5rem; /* 8px */
  --space-3: .75rem; /* 12px */
  --space-4: 1rem; /* 16px */
  --space-5: 1.25rem; /* 20px */
  --space-6: 1.5rem; /* 24px */
  --space-7: 2rem; /* 32px */

  --astro-code-color-text: var(--color-text);
  --astro-code-color-background: var(--color-box-bg);
  --astro-code-token-constant: var(--color-primary);
  --astro-code-token-string: #22863a;
  --astro-code-token-comment: var(--color-gray);
  --astro-code-token-keyword: #ec3c3c;
  --astro-code-token-parameter: #FF9800;
  --astro-code-token-function: #7538e5;
  --astro-code-token-string-expression: #0d8a2b;
  --astro-code-token-punctuation: #212121;
  --astro-code-token-link: #1976D2;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-text: rgba(255 255 255 / .8);
    --color-heading: #ddd;
    --color-light: #777;
    --color-gray: #bbb;
    --color-bg: #111;

    --color-primary-rgb: 83 118 255;

    --color-footer-bg: rgba(255, 255, 255, 0.02);
    --color-footer-border: rgba(255, 255, 255, 0.02);

    --color-box-bg: rgba(255, 255, 255, 0.02);
    --color-box-border: rgba(255, 255, 255, 0.05);

    --astro-code-token-function: #a575ff;
    --astro-code-token-string-expression: #57b96f;
    --astro-code-token-punctuation: #dedede;
  }

  article img {
    opacity: .8;
  }
}

body {
  font-family: var(--font-sans);
  display: flex;
  flex-direction: column;
  align-items: stretch;
  color: var(--color-text);
  background: var(--color-bg);
  font-weight: 500;
  font-size: var(--font-size);
}

main {
  flex-grow: 1;
}

header, main, footer {
  width: 100%;
  margin: 0 auto;
}

main {
  max-width: var(--width);
  padding: var(--space-4) var(--space-3);
}

footer {
  padding: var(--space-4) 0 var(--space-5);
  background: var(--color-footer-bg);
  border-top: 1px solid var(--color-footer-border);
}

h1, h2, h3, h4, h5, h6 {
  color: var(--color-heading);
  font-family: var(--font-serif);
  font-weight: 800;
  line-height: 1.2;
  font-size: var(--font-size);
}

h1 {
  font-size: var(--font-size-larger);
}

h2 {
  font-size: var(--font-size-large);
}

blockquote {
  padding: var(--space-4);
  border-left: 4px solid var(--color-primary);
  color: var(--color-gray);
  font-style: italic;
  background: var(--color-primary-5);
}

a {
  color: var(--color-primary);
  text-decoration: underline;
}

a:hover {
  text-decoration: none;
}

code {
  font-family: "Pragmata Pro", monospace;
}

.astro-code, .box {
  padding: var(--space-2) var(--space-3);
  border-radius: 8px;
  background: var(--color-box-bg);
}

.meta {
  display: block;
  color: var(--color-gray);
  font-size: var(--font-size-small);
}

.skip-link {
  position: absolute;
  transform: translateY(-100%);
  background: var(--color-code-bg);
  padding: var(--space-1) var(--space-2);
  border-radius: 0 0 8px 0;
}

.skip-link:focus {
  transform: translateY(0);
}

label {
  text-transform: uppercase;
  font-size: var(--font-size-small);
  display: block;
  font-weight: 700;
}

small {
  font-size: var(--font-size-small);
}

input {
  border-radius: 8px;
  padding: var(--space-1) var(--space-2);
  background: var(--color-box-bg);
  border: 1px solid var(--color-box-border);
}

input[type="submit"] {
  background: var(--color-primary);
  color: #fff;
  cursor: pointer;
}

ul, ol {
  padding-left: 20px;
}

hr {
  border-top: 1px solid var(--color-light);
  border-left: 0;
  border-right: 0;
  border-bottom: 0;
}

article img {
  border-radius: 8px;
  height: auto;
}

.clear {
  clear: both;
}

.flex-spacer {
  flex-grow: 1;
}

